syntax = "proto3";
option csharp_namespace = "InWords.Protobuf";

option java_multiple_files = true;
option java_package = "ru.inwords.inwords.proto.word_set";
option java_outer_classname = "WordSetProto";

package WordSet.v2;
import "Common.v2.proto";

// The greeting service definition.
service WordSetProvider {
	// Sends a greeting
	rpc GetSets (Common.v2.Empty) returns (WordSetReply);
	rpc GetWordsList (WordSetWordsRequest) returns (WordSetWordsReply);
	rpc ToDictionary (WordSetWordsRequest) returns (Common.v2.Empty);
}
message WordSetReply{
	message WordSetInfo{
		int32 id = 1;
		string title = 2;
		string description = 3;
		string picture = 4;
	}
	repeated WordSetInfo wordSets = 1;
}

// The request message containing the user's credentials.
message WordSetWordsRequest {
	int32 WordSetId = 1;
}

message WordSetWordsReply {
	repeated WordSetWord Words = 1;
}

// The response message containing the Token.
message WordSetWord {
	int32 WordPairId = 1;
	bool HasAdded = 2;
	string WordForeign = 3;
	string WordNative = 4;
}
